Generics_Extend_CaptureConversion/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:14: error: incompatible types: Object cannot be converted to CAP#1
        ce.readFromIt(obj);
                      ^
  where CAP#1 is a fresh type-variable:
    CAP#1 extends InputStream from capture of ?
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
 
============================================================================= 
ExtendJ errors for Code1.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_CaptureConversion\Code1.java:14: error: no method named readFromIt(java.lang.Object) in Code1<?> matches. However, there is a method readFromIt(wildcards.? extends InputStream)
 
============================================================================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics_Extend_CaptureConversion\Code1.java (at line 14)
	ce.readFromIt(obj);
	   ^^^^^^^^^^
The method readFromIt(capture#1-of ?) in the type Code1<capture#1-of ?> is not applicable for the arguments (Object)
----------
1 problem (1 error)
